--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html --no-source-maps --no-cache"
   },
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "parcel-plugin-clean-easy": "^1.0.2",
     "sass": "^1.27.0"
   },
